# pokemon-simulator

./: .gitignore  CMakeLists.txt  readme.md  rungame.sh
include/core/: Game.hpp  Scene.hpp  SceneManager.hpp
include/logger/: Logger.hpp
include/platform/: DirectXApp.hpp
include/scenes/: MenuScene.hpp
shaders/: FullscreenQuad.hlsl
src/: main.cpp
src/core/: Game.cpp  SceneManager.cpp
src/logger/: Logger.cpp
src/platform/: DirectXApp.cpp
src/scenes/: MenuScene.cpp
